# DroneLib-2.0

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/docs/Lib-docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_ecc01e5fb7df43a8d1be77fddb601116.html  dir_f8c8e6ba86dc96896ed0679c8a35b6f9.html  graph_legend.html  index.html
app/docs/Lib-docs/latex/: refman.tex
app/include/Lib/: JsonParser.h  Utils.h
src/android/: gradle.properties
src/android/app/: build.gradle
src/android/app/src/androidTest/java/ns/dronelib/android/: ExampleInstrumentedTest.java
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/cpp/: AndroidController.cpp  AndroidController.h  CMakeLists.txt  EventHandler.cpp  EventHandler.h  StreamRedirector.h  native-lib.cpp
src/android/app/src/main/java/ns/dronelib/android/: AudioDataSource.java  AudioMediaPlayer.java  ConfigActivity.java  CustomVideoDataSource.java  IMessageListener.java  JNIHelper.java  MainActivity.java  StreamDataSource.java  StreamMediaPlayer.java  VideoDataSource.java  VideoMediaPlayer.java
src/android/app/src/main/res/drawable/: button_back.xml
src/android/app/src/main/res/layout/: activity_config.xml  activity_main.xml
src/android/app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
src/android/app/src/test/java/ns/dronelib/android/: ExampleUnitTest.java
src/android/gradle/wrapper/: gradle-wrapper.properties
src/client/: CMakeLists.txt  Makefile
src/client/include/: BatteryReceiver.h  ClientController.h  ClientReceiver.h  ClientSender.h  IEventHandler.h
src/client/src/: BatteryReceiver.cpp  CMakeLists.txt  ClientController.cpp  ClientReceiver.cpp  ClientSender.cpp  main.cpp
src/client/tests/: CMakeLists.txt  ClientControllerTest.cpp  ClientReceiverTest.cpp  ClientSenderTest.cpp
src/docs/: CMakeLists.txt  config.dox  index.dox
src/drone/: CMakeLists.txt  Makefile
src/drone/include/: Constants.h  Controller.h  DroneController.h  DroneReceiver.h  DroneSender.h  Network.h
src/drone/include/component/: Buzzer.h  Led.h  Motor.h
src/drone/include/controller/: BatteryController.h  BuzzerController.h  ComponentController.h  LedController.h  MotorController.h  ServoController.h
src/drone/include/hardware/: I2C.h
src/drone/src/: CMakeLists.txt  Controller.cpp  DroneController.cpp  DroneReceiver.cpp  DroneSender.cpp  Network.cpp  main.cpp
src/drone/src/controller/: BatteryController.cpp  BuzzerController.cpp  ComponentController.cpp  LedController.cpp  MotorController.cpp  ServoController.cpp
src/drone/src/hardware/: I2C.cpp
src/drone/tests/: CMakeLists.txt  DroneControllerTest.cpp  DroneReceiverTest.cpp  DroneSenderTest.cpp  NetworkTest.cpp  main.cpp
src/drone/tests/controller/: BatteryControllerTest.cpp  BuzzerControllerTest.cpp  LedControllerTest.cpp  MotorControllerTest.cpp  ServoControllerTest.cpp
src/lib/: CMakeLists.txt
src/lib/docs/: CMakeLists.txt  doc_config.in
src/lib/include/: Controller.h  ErrorListener.h  IController.h  JsonParser.h  Service.h  Utils.h
src/lib/include/net/: NetHelper.h  NetReceiver.h  NetSender.h  NetTcp.h  NetUdp.h  NetworkHelper.h  NetworkService.h  Tcp.h  Udp.h
src/lib/include/stream/: AudioReceiver.h  AudioSender.h  MediaSender.h  Stream.h  StreamPool.h  StreamReceiver.h  StreamSender.h  VideoReceiver.h  VideoSender.h
src/lib/include/utils/: Config.h  Constants.h  Helper.h  Logger.h  Structs.h
src/lib/src/: CMakeLists.txt  Controller.cpp  ErrorListener.cpp  IController.cpp  JsonParser.cpp  Makefile  Service.cpp
src/lib/src/net/: NetHelper.cpp  NetReceiver.cpp  NetSender.cpp  NetTcp.cpp  NetUdp.cpp  NetworkHelper.cpp  NetworkService.cpp  Tcp.cpp  Udp.cpp
src/lib/src/stream/: AudioReceiver.cpp  AudioSender.cpp  MediaSender.cpp  StreamPool.cpp  StreamReceiver.cpp  StreamSender.cpp  VideoReceiver.cpp  VideoSender.cpp
src/lib/src/utils/: Config.cpp  Helper.cpp  Logger.cpp
src/lib/test/: CMakeLists.txt
src/lib/tests/: CMakeLists.txt
src/lib/tests/net/: NetHelperTest.cpp  NetTcpTest.cpp  NetUdpTest.cpp  NetworkHelperTest.cpp  TcpTest.cpp  UdpTest.cpp
src/lib/tests/stream/: MediaSenderTest.cpp  StreamPoolTest.cpp  StreamReceiverTest.cpp  StreamSenderTest.cpp
src/lib/tests/utils/: ConfigTest.cpp  LoggerTest.cpp
src/pc/: CMakeLists.txt
src/pc/include/: Constants.h  Controller.h  EventHandler.h  FPSLimiter.h  Network.h  PCController.h  PCHelper.h  PCReceiver.h  PCSender.h  PCSpeaker.h  PCWindow.h  Types.h
src/pc/src/: CMakeLists.txt  Controller.cpp  EventHandler.cpp  FPSLimiter.cpp  Network.cpp  PCController.cpp  PCReceiver.cpp  PCSender.cpp  PCSpeaker.cpp  PCWindow.cpp  main.cpp
src/pc/tests/: CMakeLists.txt  EventHandlerTest.cpp  NetworkTest.cpp  PCControllerTest.cpp  PCReceiverTest.cpp  PCSenderTest.cpp  PCWindowTest.cpp
src/tests/: CMakeLists.txt  IntegrationTest.cpp
tests/: Makefile  main.c
